--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,17 @@ text {
 }
 }
   
+
+
+#gameCanvas {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }
+
+#score {
+	text-align: center;
+	font-size: 100px;
+	font-family: 'Antic Slab', serif;
+  }
